@@ -181,6 +181,16 @@ sub load_build
     $options = {
       source => ["$dir/*.c", "$dir/*.cxx", "$dir/*.cpp"],
     };
+    # if we see a Go, Rust control file then we assume the
+    # ffi mod is written in that language.
+    foreach my $control_file ("$dir/Cargo.toml", "$dir/go.mod")
+    {
+      if(-f $control_file)
+      {
+        $options->{source} = [$control_file];
+        last;
+      }
+    }
   }
 
   $options->{platform} ||= $platform;
