@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Detect Rust or Go modules according to Cargo.toml or go.mod files (gh#197)
 
 0.99_05   2019-10-30 19:25:02 -0600
   - Add FFI::Build support for build_all method (gh#195)
